<resources>
    <string name="app_name">LawRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string	name="chinese_btn">chinese</string>
	<string	name="english_btn">english</string>
	<string name="yellow">yellow</string>
	<string name="red">red</string>
	<string name="gray">gray</string>
	<string name="green">green</string>
	<string name="orange">orange</string>
	<string name="blue">blue</string>
	<string name="black">black</string>
    <string name="stop_recorder">stop recorder</string>
	<string name="start_recorder">start recorder</string>
	<string name="no_sdcard">no sdcard</string>
	<string name="start_audio">start audio</string>
	<string name="stop_audio">stop audio</string>
	<string name="save_to">save to</string>
	<string name="shoot_two_photo_continuously"> two continuously</string>
	<string name="shoot_three_photo_continuously">three continuously</string>
	<string name="shoot_five_photo_continuously">five continuously</string>
	<string name="shoot_ten_photo_continuously">ten continuously</string>
	<string name="shoot_twenty_photo_continuously">twenty continuously</string>
	<string name="take_picture_successfully">take picture successfully!</string>
	<string name="the_USB_mode_settings">USB mode settings</string>
	<string name="Volume">Volume</string>
	<string name="SegmentedVideo">SegmentedVideo</string>
	<string name="red_line">fraredRay</string>
	<string name="the_GPS">GPS</string>
	<string name="play_error">play failed</string>
	<string name="no_audio_file">No audio file！</string>
	<string name="take_picture">take picture</string>
	<string name="play_video">play video</string>
	<string name="simplified_chinese">simplified chinese</string>
	<string name="english">English</string>
	<string name="get_video_lists">video</string>
	<string name="get_photo_lists">photo</string>
	<string name="get_sound_lists">sound</string>
	<string name="video_browsing">Video</string>
	<string name="photo_browsing">Photo</string>
	<string name="sound_browsing">Voice</string>
	<string name="open_camera">change camera</string>
	<string name="setup">set up</string>
	<string name="picture_size">picture size</string>
	<string name="takephoto_continuously">takephoto continously</string>
	<string name="MaxDuration">MaxDuration</string>
	<string name="the_audio_sampling_rate">audio sampling rate</string>
	<string name="resolution_ratio">resoulution ratio</string>
	<string name="picture_quality">picture quality</string>
	<string name="video_delay">video delay</string>
	<string name="motion_detection">motion detection</string>
	<string name="lower">lower</string>
	<string name="high">high</string>
	<string name="medium">medium</string>
	<string name="delicacy">delicacy</string>
	<string name="file_mode">file mode</string>
	<string name="power_on">power on</string>
	<string name="power_off">power off</string>
	<string name="cancle_delay_time">cancle</string>
	<string name="upload_to_server">upload to server</string>
	<string name="one_key_upload">one key upload</string>
	<string name="segmented_video_record">segmented video record</string>
	<string name="realtime_audio">realtime audio</string>
	<string name="realtime_video">realtime video</string>
	<string name="query">query</string>
	<string name="importance">importance</string>
	<string name="common">common</string>
	<string name="never">never</string>
	<string name="police_number">police number</string>
	<string name="device_number">device number</string>
	<string name="fill_in_numbers">fill in numbers please</string>
	<string name="date_setting">date setting</string>
	<string name="time_setting">time setting</string>
	<string name="usr_passwd">user password</string>
	<string name="restore">restore to defaults</string>
	<string name="compass">Compass</string>
	<string name="getting_location">Getting location...</string>
	<string name="cannot_get_location">Cannot get your location</string>
	<string name="cannot_get_sensor">Cannot get any sensor</string>
	<string name="location_north">%s N</string>
	<string name="location_south">%s S</string>
	<string name="location_east">%s E</string>
	<string name="location_west">%s W</string>
	<string name="exit_toast">Click again exit application</string>
	<string name="ac_name_image_list">Image List Example</string>
	<string name="ac_name_image_grid">Image Grid Example</string>
	<string name="ac_name_image_pager">Image Pager Example</string>
	<string name="ac_name_image_gallery">Image Gallery Example</string>
	<string name="label_activity_examples">Activity Examples</string>
	<string name="menu_item_clear_memory_cache">Clear memory cache</string>
	<string name="menu_item_clear_disc_cache">Clear disc cache</string>
	<string name="menu_item_pause_on_scroll">Pause on scroll</string>
	<string name="menu_item_pause_on_fling">Pause on fling</string>
	<string name="button_image_list">ListView</string>
	<string name="button_image_grid">GridView</string>
	<string name="button_image_pager">ViewPager</string>
	<string name="button_image_gallery">Gallery</string>
	<string name="descr_image">Image</string>
	<string name="play">play</string>
	<string name="totalsize">total size</string>
	<string name="surplussize">surplus size</string>
	<string name="vibrator">vibrator</string>
	<string name="uvc_record_start">start record</string>
	<string name="uvc_record_finish">stop record</string>
	<string name="button_video">star/stop</string>
	<string name="button1">photo</string>
	<string name="forth_gen_trans">PTT</string>
	<string name="usb_video_camera">UVC</string>
	<string name="journal">Journal</string>
	<string name="phone">Phone</string>
	<string name="ftp_setting">FTP</string>
	<string name="message">Message</string>
	<string name="wifi_setting">Wifi</string>
	<string name="back">Back</string>
	<string name="passwd_input">Password please</string>
	<string name="password_tips">six numbers</string>
    <string name="cancel">cancle</string>
    <string name="confirm">ok</string>
    <string name="video_solution">solution</string>
    <string name="frame_rate">frame rate</string>
    <string name="close">close</string>
    <string name="segment_recording">Segment duration</string>
    <string name="record_in_advance">Record in advance</string>
    <string name="normal">normal</string>
    <string name="video_quality">Quality</string>
    <string name="watermark">Video watermark</string>
    <string name="watermark_format">Watermark format</string>
    <string name="watermark_tips">Only numbers, line, space, colon permit</string>
    <string name="admin_name">Admin name</string>
    <string name="user_name">User name</string>
    <string name="admin_passwd">Admin password</string>
    <string name="company_number">Company number</string>
    <string name="company_name">Company name</string>
    <string name="format_sdcard">Format sd card</string>
    <string name="system_update">System update</string>
    <string name="version">V2.2.2</string>
    <string name="factory_setting">Factory setting</string>
	<string name="gps_location">Gps location</string>
	<string name="wifi">Wifi</string>
	<string name="prompt_tone">Prompt tone</string>
	<string name="tts_setting">Text to speech</string>
	<string name="tts_tips">Please select xunfei speech</string>
	<string name="picture_mode">Picture mode</string>
	<string name="file_browse_mode">File browse mode</string>
	<string name="system_language_setting">System language setting</string>
	<string name="usb_setting">USB setting</string>
	<string name="usb_forbiden">Forbiden</string>
	<string name="usb_mode_cmd">Command Mode</string>
	<string name="usb_mode_udisk">U Disk Mode</string>
	<string name="manual">Manual</string>
	<string name="infrared">Infrared</string>
	<string name="recording_screen_on">Keep screen on when recording</string>
	<string name="keep_screen_on">Keep screen on</string>
	<string name="display_setting">Display setting</string>
	<string name="display_tips">Brightness, font and dormant time</string>
	<string name="bluetooth">Bluetooth</string>
	<string name="preview_solution">Preview solution</string>
	<string name="picture_solution">Picture solution</string>
	<string name="continuous_shooting">Continuous shooting</string>
	<string name="picture_watermark">Picture watermark</string>
	<string name="picture_watermark_format">Picture watermark format</string>
	<string name="picture_format">Picture format</string>
	<string name="audio_sampling_rate">Audio sampling rate</string>
	<string name="audio_format">Audio format</string>
	<string name="audio_max_duration">Max recording duration</string>
	<string name="camera_exception">Camera exception</string>
	<string name="no_sdcard_tips">Please insert sdcard</string>
	<string name="no_photo_tips">Photo is not available now</string>
	<string name="no_frequent_ops">No frequent operation</string>
	<string name="mark_as_important">Mark as important file</string>
	<string name="wait_tips">Wait for a moment</string>
	<string name="recording_interrupt_tips">On the Recording, are you sure interrpt?</string>
	<string name="on_audio_recording">Audio Recording</string>
	<string name="photo_ok_tips">Photo saved</string>
	<string name="no_battery_tips">No power now, stop recording and poweroff soon</string>
	<string name="stop">Stop</string>
	<string name="start">Start</string>
	<string name="system_setting">Setting</string>
	<string name="video_settings">Video setting</string>
	<string name="sound_settings">Photo setting</string>
	<string name="audio_settings">Audio setting</string>
	<string name="Language_settings">System language setting</string>
	<string name="WIFI_settings">Wifi setting</string>
	<string name="self_lockscreen">Auto screen off</string>
	<string name="key_tone">Key tone</string>
	<string name="file_pattern">File browse mode</string>
	<string name="manual_lockscreen">Manual lock screen</string>
	<string name="data_and_time">Date and Time</string>
	<string name="east_longitude">East longitude</string>
	<string name="west_longitude">West longitude</string>
	<string name="south_latitude">South latitude</string>
	<string name="north_latitude">North latitude</string>
	<string name="direct_east">E</string>
	<string name="direct_west">W</string>
	<string name="direct_south">S</string>
	<string name="direct_north">N</string>
	<string name="direct_north_east">EN</string>
	<string name="direct_south_east">ES</string>
	<string name="direct_north_west">WN</string>
	<string name="direct_south_west">WS</string>
	<string name="allow_location_service">Allow location service</string>
	<string name="allow_location_service_describe">Allow location service to improve the data accuracy</string>
	<string name="calibrate_compass">Compass interference. Wave the phone in figure 8 motion to re-calibrate the compass.</string>
	<string name="character_degree">°</string>
	<string name="character_fen">′</string>
	<string name="character_miao">″</string>
	<string name="video_para">Video</string>
	<string name="picture_para">Picture</string>
	<string name="user_para">User</string>
	<string name="file_view_mode">File</string>
	<string name="video_param_set">Video parameter setting</string>
	<string name="photo_setting">Photo setting</string>
	<string name="max_video_duration">Max video duration</string>
	<string name="video_formation">Video formation</string>
	<string name="flash_light">Flash light</string>
	<string name="camera_focus_mode">Focus mode</string>
	<string name="camera_white_balance">White balance</string>
	<string name="camera_scance">Scene</string>
	<string name="camera_compensation">Exposure compensation</string>
	<string name="photo_quality">Photo quality</string>
	<string name="audio_recorder_parameter">Audio parameter setting</string>
	<string name="sos_setting">SOS setting</string>
	<string name="thirty_minutes">30 min</string>
	<string name="click_to_set">Click to set</string>
	<string name="android_setting">Android Setting</string>
</resources>